# nids

./: .gitignore  README.md
backend/: package-lock.json  package.json
backend/scripts/: add-host-col.js  cleanup_notifications.js  clear_alerts.js  db_clean.js  db_query.js  migrate.js
backend/src/: .env.example  Dockerfile  db.js  index.js  utils.js
frontend/: index.html  script.js  style.css
scripts/: build.bat  clean.bat  clear_alerts.bat  start.bat
sensor/: CMakeLists.txt
sensor/src/: main.cpp  packet_sniffer.cpp  packet_sniffer.h
